# terceira-ponte-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  curl_res.txt
src/: main.rs
