[package]
name = "terceira-ponte-bot"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Henriquelay/terceira-ponte-bot"
license = "The Unlicense"
readme = "README.md"
categories = ["chatbot"]
description = "A simple bot that replies with an image to an important road where I live"
keywords = ["telegram", "bot", "link", "teloxide"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
teloxide = { version = "0.12", features = ["macros", "rustls"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.29", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["rustls-tls", "tokio-rustls"] }
scraper = "0.17"
futures = "0.3"
